# inflector-plus

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/cases/: mod.rs
src/cases/sentencecase/: mod.rs
src/cases/wordcase/: mod.rs
src/string/: mod.rs
src/string/articlize/: mod.rs
src/string/dearticlize/: mod.rs
src/string/singularize/: mod.rs
tests/: lib.rs
